@@ -1,3 +1,8 @@
+Mon Apr 18 20:06:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* All 'local' variables must be at the start of function for
+	  compatibility.
+
 Sun Apr 17 20:08:28 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added TODO.
